# python-kpdvdb

./: CHANGELOG.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/_workflows/: test_n_pub.yml
.github/workflows/: pub.yml
src/kpdvdb/: __init__.py
tests/: conftest.py  test_all.py  test_load.py
