[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kpdvdb"
description = "KayPENTAX Disordered Voice Database Reader module"
readme = "README.rst"
keywords = ["multimedia"]
license = { text = "GPL-2.0 License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["pandas", "nspfile>=0.1.2"]

[project.urls]
Repository = "https://github.com/tikuma-lsuhsc/python-kpdvdb"
Issues = "https://github.com/tikuma-lsuhsc/python-kpdvdb/issues"
Pull_Requests = "https://github.com/tikuma-lsuhsc/python-kpdvdb/pulls"

[tool.setuptools.dynamic]
version = { attr = "kpdvdb.__version__" }
