[metadata]
name = kpdvdb
version = attr: kpdvdb.__version__
description = KayPENTAX Disordered Voice Database Reader
long_description_content_type = text/x-rst
long_description = file: README.rst
keywords = multimedia
license = GPL-2.0 License
url=https://github.com/tikuma-lsuhsc/python-kpdvdb
project_urls=
    Issues=https://github.com/tikuma-lsuhsc/python-kpdvdb/issues
    Pull Requests=https://github.com/tikuma-lsuhsc/python-kpdvdb/pulls
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Multimedia :: Sound/Audio
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages=kpdvdb
install_requires =
    pandas
    nspfile >=0.1.2
python_requires = >=3.6,
